can merge credit to prev app

--- a/in_progress/home_default/6_.ipynb
+++ b/in_progress/home_default/6_.ipynb
@@ -34,6 +34,7 @@
     "- Tinker with the best way to replace missing values (dropping cols?)\n",
     "- Look for outliers\n",
     "- Merge db together\n",
+    "- Include timeline relatoinships like MONTHS_BALANCE\n",
     "- Tune model parameters\n",
     "- Address [this](https://www.kaggle.com/c/home-credit-default-risk/discussion/57248)"
    ]
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +122,7 @@
    "source": [
     "bureau = pd.read_csv(DATA_PATH + \"bureau.csv\")\n",
     "bureau_balance = pd.read_csv(DATA_PATH + \"bureau_balance.csv\")\n",
-    "previous_application = pd.read_csv(DATA_PATH + \"previous_application.csv\")"
+    "prev_app = pd.read_csv(DATA_PATH + \"previous_application.csv\")"
    ]
   },
   {
@@ -518,6 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "<a id=\"credit\"></a>\n",
     "\n",
     "# [^](#toc) <u>Credit Card Balance</u>"
@@ -525,12 +527,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of credit_card: (3840312, 23)\n",
+      "\n",
+      "Columns of credit_card:\n",
+      "SK_ID_PREV --- SK_ID_CURR --- MONTHS_BALANCE --- AMT_BALANCE --- AMT_CREDIT_LIMIT_ACTUAL --- AMT_DRAWINGS_ATM_CURRENT --- AMT_DRAWINGS_CURRENT --- AMT_DRAWINGS_OTHER_CURRENT --- AMT_DRAWINGS_POS_CURRENT --- AMT_INST_MIN_REGULARITY --- AMT_PAYMENT_CURRENT --- AMT_PAYMENT_TOTAL_CURRENT --- AMT_RECEIVABLE_PRINCIPAL --- AMT_RECIVABLE --- AMT_TOTAL_RECEIVABLE --- CNT_DRAWINGS_ATM_CURRENT --- CNT_DRAWINGS_CURRENT --- CNT_DRAWINGS_OTHER_CURRENT --- CNT_DRAWINGS_POS_CURRENT --- CNT_INSTALMENT_MATURE_CUM --- NAME_CONTRACT_STATUS --- SK_DPD --- SK_DPD_DEF\n"
+     ]
+    }
+   ],
+   "source": [
+    "credit_card = pd.read_csv(DATA_PATH + \"credit_card_balance.csv\")\n",
+    "print(\"Shape of credit_card:\",  credit_card.shape)\n",
+    "\n",
+    "print(\"\\nColumns of credit_card:\")\n",
+    "print(\" --- \".join(credit_card.columns.values))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Missing Values and Outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------------------\n",
+    "### Remove outliers\n",
+    "# Gets indices with outlier values\n",
+    "temp = credit_card[credit_card.NAME_CONTRACT_STATUS.isin([\"Refused\", \"Approved\"])].index\n",
+    "\n",
+    "# Drops outlier values\n",
+    "credit_card = credit_card.drop(temp, axis=0)\n",
+    "\n",
+    "# ------------------------------\n",
+    "#### Fill in missing values\n",
+    "cols = [\n",
+    "        \"AMT_DRAWINGS_ATM_CURRENT\", \"AMT_DRAWINGS_OTHER_CURRENT\", \"AMT_DRAWINGS_POS_CURRENT\", \n",
+    "        \"AMT_INST_MIN_REGULARITY\", \"AMT_PAYMENT_CURRENT\", \"CNT_DRAWINGS_ATM_CURRENT\", \n",
+    "        \"CNT_DRAWINGS_OTHER_CURRENT\", \"CNT_DRAWINGS_POS_CURRENT\", \"CNT_INSTALMENT_MATURE_CUM\"\n",
+    "]\n",
+    "for col in cols:\n",
+    "    not_null = credit_card[col].notnull()\n",
+    "    mode = float(credit_card[not_null][col].mode())\n",
+    "    credit_card[col] = credit_card[col].fillna(mode)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup Categorical column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "temp = credit_card[[\"SK_ID_PREV\", \"NAME_CONTRACT_STATUS\"]]\n",
+    "\n",
+    "# function to create dummy variables of categorical features\n",
+    "def get_dummies(df, cats):\n",
+    "    for col in cats:\n",
+    "        df = pd.concat([df, pd.get_dummies(df[col], prefix=col)], axis=1)\n",
+    "    return df \n",
+    "\n",
+    "temp = get_dummies(temp, [\"NAME_CONTRACT_STATUS\"])\n",
+    "temp = temp.drop(\"NAME_CONTRACT_STATUS\", axis=1)\n",
+    "temp = temp.groupby(\"SK_ID_PREV\").sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_merge = pd.DataFrame({\n",
+    "    \"AMT_BALANCE\": credit_card.groupby(\"SK_ID_PREV\").AMT_BALANCE.mean(),\n",
+    "    \"SK_DPD\": credit_card.groupby(\"SK_ID_PREV\").SK_DPD.max(),\n",
+    "    \"SK_DPD_DEF\": credit_card.groupby(\"SK_ID_PREV\").SK_DPD_DEF.max()\n",
+    "})\n",
+    "\n",
+    "temp = temp.join(credit_merge)\n",
+    "del credit_merge"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -543,17 +645,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Merge\n",
+    "merged_cols = ['credit_' + col for col in temp.columns]\n",
+    "temp.columns = merged_cols\n",
+    "prev_app = prev_app.merge(right=temp.reset_index(), how='left', on='SK_ID_PREV')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Fill in new NaN values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prev_app[\"no_credit\"] = prev_app[merged_cols[0]].map(lambda x: 1 if np.isnan(x) else 0)\n",
+    "\n",
+    "for col in merged_cols:\n",
+    "    not_null = prev_app[col].notnull()\n",
+    "    median = prev_app[not_null][col].median()\n",
+    "    prev_app[col] = prev_app[col].fillna(median)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Final Data Prep\n",
+    "\n",
     "### Split again into predictors, target, and id"
    ]
   },
