more work on submission notebook

--- a/in_progress/home_default/7_merge_tuning.ipynb
+++ b/in_progress/home_default/7_merge_tuning.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -207,7 +207,13 @@
     "merge_df = merge_df.drop([\"MONTHS_BALANCE\", \"STATUS\"], axis=1)\n",
     "\n",
     "# prep for merge\n",
-    "merge_df = merge_df.groupby(\"SK_ID_BUREAU\").sum()\n",
+    "merge_df = merge_df.groupby(\"SK_ID_BUREAU\").sum().reset_index()\n",
+    "\n",
+    "### Add the median of the rest of the columns\n",
+    "right    = bureau_balance.groupby(\"SK_ID_BUREAU\").median().reset_index()\n",
+    "merge_df = merge_df.merge(right=right, how=\"left\", on=\"SK_ID_BUREAU\").set_index(\"SK_ID_BUREAU\")\n",
+    "\n",
+    "### Remember added columns\n",
     "merged_cols = ['bur_bal_' + col for col in merge_df.columns]\n",
     "merge_df.columns = merged_cols\n",
     "\n",
@@ -224,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -296,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -314,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -337,20 +343,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# prep for merge\n",
     "count    = merge_df.groupby(\"SK_ID_PREV\").count()\n",
-    "merge_df = merge_df.groupby(\"SK_ID_PREV\").sum()\n",
-    "merge_df[\"N\"] = count.iloc[:,0]\n",
+    "merge_df = merge_df.groupby(\"SK_ID_PREV\").sum().reset_index()\n",
+    "merge_df[\"N\"] = list(count.iloc[:,0])\n",
+    "\n",
+    "right    = pcb.drop(\"SK_ID_CURR\", axis=1).groupby(\"SK_ID_PREV\").median().reset_index()\n",
+    "merge_df = merge_df.merge(right=right, how=\"left\", on=\"SK_ID_PREV\").set_index(\"SK_ID_PREV\")\n",
     "\n",
     "merged_cols = ['pos_' + col for col in merge_df.columns]\n",
     "merge_df.columns = merged_cols\n",
     "\n",
     "# Merge\n",
     "prev_app = prev_app.merge(right=merge_df.reset_index(), how='left', on='SK_ID_PREV')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fill in missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 13/13 [00:11<00:00,  1.17it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prev_app[\"no_pcb\"] = prev_app[merged_cols[0]].map(lambda x: 1 if np.isnan(x) else 0)\n",
+    "\n",
+    "for col in tqdm(merged_cols):\n",
+    "    not_null      = prev_app[col].notnull()\n",
+    "    mode          = prev_app[not_null][col].mode()\n",
+    "    prev_app[col] = prev_app[col].fillna(mode)    "
    ]
   },
   {
@@ -365,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -418,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +471,28 @@
     "    \"INSTALL_missing_med\": temp.median(),\n",
     "    \"INSTALL_payment_nan\": install_pay.groupby(\"SK_ID_PREV\")[\"AMT_PAYMENT_nan\"].sum(),\n",
     "    \"INSTALL_N\":           temp.count()\n",
-    "})\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add the rest of the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "right = install_pay.drop(\"SK_ID_CURR\", axis=1).groupby(\"SK_ID_PREV\").median().reset_index()\n",
+    "merge_df = merge_df.reset_index()\n",
+    "\n",
+    "merge_df = merge_df.merge(right=right, how=\"left\", on=\"SK_ID_PREV\").set_index(\"SK_ID_PREV\")\n",
     "merged_cols = merge_df.columns"
    ]
   },
@@ -446,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -465,11 +526,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14/14 [00:14<00:00,  1.07s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "prev_app[\"no_install\"] = prev_app[merged_cols[0]].map(lambda x: 1 if np.isnan(x) else 0)\n",
     "\n",
@@ -491,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -524,11 +591,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9/9 [00:09<00:00,  1.09s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------------------\n",
     "### Remove outliers\n",
@@ -560,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
@@ -582,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,6 +674,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Add the rest of the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "right = credit_card.drop(\"SK_ID_CURR\", axis=1).groupby(\"SK_ID_PREV\").median().reset_index()\n",
+    "merge_df = merge_df.reset_index()\n",
+    "merge_df = merge_df.merge(right=right, how=\"left\", on=\"SK_ID_PREV\").set_index(\"SK_ID_PREV\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"merge_credit\"></a>\n",
     "\n",
     "### [^](#toc) <u>Merge into Previous Application</u>"
@@ -608,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
@@ -629,11 +720,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 29/29 [00:07<00:00,  4.03it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "prev_app[\"no_credit\"] = prev_app[merged_cols[0]].map(lambda x: 1 if np.isnan(x) else 0)\n",
     "\n",
@@ -649,18 +746,22 @@
    "source": [
     "---\n",
     "\n",
-    "### Drop unneeded SK_ID_PREV from prev_app"
+    "### Misc clean up"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "prev_app = prev_app.drop(\"SK_ID_PREV\", axis=1)"
+    "### Drop unneeded SK_ID_PREV from prev_app\n",
+    "prev_app = prev_app.drop(\"SK_ID_PREV\", axis=1)\n",
+    "\n",
+    "print(\"Number of null in prev_app:\", sum(prev_app.isnull().sum()))\n",
+    "print(\"Number of null in bureau:  \", sum(bureau.isnull().sum()))"
    ]
   },
   {
@@ -675,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 117,
    "metadata": {
     "collapsed": true
    },
@@ -729,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
@@ -752,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
@@ -777,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
@@ -803,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 121,
    "metadata": {
     "collapsed": true
    },
@@ -822,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -849,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,14 +971,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 161/187 [02:12<00:21,  1.22it/s]"
+      "100%|██████████| 222/222 [03:12<00:00,  1.15it/s]\n"
      ]
     }
    ],
@@ -899,16 +1000,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Average Values for all bureau features \n",
-    "bureau_avg         = bureau.groupby('SK_ID_CURR').mean()\n",
-    "bureau_avg['N']    = bureau.groupby('SK_ID_CURR').count().iloc[:,0]\n",
-    "bureau_avg.columns = ['b_' + f_ for f_ in bureau_avg.columns]\n",
+    "merge_df         = bureau.groupby('SK_ID_CURR').mean()\n",
+    "merge_df['N']    = bureau.groupby('SK_ID_CURR').count().iloc[:,0]\n",
+    "merge_df.columns = ['b_' + f_ for f_ in bureau_avg.columns]\n",
     "\n",
     "full = full.merge(right=bureau_avg.reset_index(), how='left', on='SK_ID_CURR')"
    ]
@@ -922,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
@@ -940,15 +1041,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "train_x = full[:train_N]\n",
-    "test_x = full[train_N:]\n",
-    "del full, train_N"
+    "test_x = full[train_N:]"
    ]
   },
   {
@@ -964,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -1010,14 +1110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took 15 seconds\n"
+      "Training took 16 seconds\n"
      ]
     }
    ],
@@ -1038,18 +1138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.26381318  0.26155557]\n",
+      "[ 0.26362374  0.26144034]\n",
       "\n",
-      "0.262684375536\n",
+      "0.262532039663\n",
       "\n",
-      "Scoring took 15 seconds\n"
+      "Scoring took 16 seconds\n"
      ]
     }
    ],
