--- a/in_progress/home_default/analysis.ipynb
+++ b/in_progress/home_default/analysis.ipynb
@@ -22,7 +22,8 @@
     "1.) [Imports](#imports)  \n",
     "2.) [Train and Test](#train_test)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 2.1.) [Target](#target)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 2.2.) [Categorical columns](#train_cat)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 2.2.) [Numeric columns](#train_num)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 2.3.) [Categorical columns](#train_cat)  \n",
     "3.) [Bureau](#bureau)  \n",
     "4.) [Bureau Balance](#bureau_balance)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 4.1.) [Months Balance](#bur_bal_month)  \n",
@@ -386,9 +387,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"train_num\"></a>\n",
+    "\n",
+    "### [^](#toc) <u>Numeric columns</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"train_cat\"></a>\n",
     "\n",
-    "### [^](#toc) Categorical columns"
+    "### [^](#toc) <u>Categorical columns</u>"
    ]
   },
   {
@@ -431,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plots of each of the categorical features\n",
+    "#### Plots of each of the categorical features\n",
     "\n",
     "Thankfully they all seem to have a limited number of entries so either factorization or dummies is possible.  OCCUPATION_TYPE seems to have the most variety, but it's still doable"
    ]
