all db cols are present in final model

--- a/in_progress/home_default/7_merge_tuning.ipynb
+++ b/in_progress/home_default/7_merge_tuning.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -99,6 +99,22 @@
     "def get_dummies(df, cats):\n",
     "    for col in cats:\n",
     "        df = pd.concat([df, pd.get_dummies(df[col], prefix=col)], axis=1)\n",
+    "    return df \n",
+    "\n",
+    "def fillna_num(df):\n",
+    "    missing_cols = [col for col in df.columns if any(df[col].isnull()) and df[col].dtype != object]\n",
+    "    for col in missing_cols:\n",
+    "        df[col] = df[col].fillna(df[col].median())\n",
+    "    return df\n",
+    "\n",
+    "def fillna_cat(df):\n",
+    "    for col in [col for col in df if df[col].dtype==object]:\n",
+    "        df[col] = df[col].fillna(df[col].mode()[0])\n",
+    "    return df\n",
+    "\n",
+    "def factorize_df(df, cats):\n",
+    "    for col in cats:\n",
+    "        df[col], _ = pd.factorize(df[col])\n",
     "    return df "
    ]
   },
@@ -114,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,6 +156,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bureau   = fillna_num(bureau)\n",
+    "bureau   = fillna_cat(bureau)\n",
+    "\n",
+    "prev_app = fillna_num(prev_app)\n",
+    "prev_app = fillna_cat(prev_app)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"bureau_bal\"></a>\n",
     "\n",
     "# [^](#toc) <u>Bureau Balance</u>"
@@ -147,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -302,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -320,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -343,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -373,14 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:11<00:00,  1.17it/s]\n"
+      "100%|██████████| 13/13 [00:09<00:00,  1.31it/s]\n"
      ]
     }
    ],
@@ -405,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -458,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -507,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -526,14 +564,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 14/14 [00:14<00:00,  1.07s/it]\n"
+      "100%|██████████| 14/14 [00:13<00:00,  1.01it/s]\n"
      ]
     }
    ],
@@ -558,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -591,14 +629,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:09<00:00,  1.09s/it]\n"
+      "100%|██████████| 9/9 [00:10<00:00,  1.14s/it]\n"
      ]
     }
    ],
@@ -633,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -655,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -720,14 +758,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29/29 [00:07<00:00,  4.03it/s]\n"
+      "100%|██████████| 29/29 [00:09<00:00,  3.18it/s]\n"
      ]
     }
    ],
@@ -751,11 +789,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of null in prev_app: 0\n",
+      "Number of null in bureau:   0\n"
+     ]
+    }
+   ],
    "source": [
     "### Drop unneeded SK_ID_PREV from prev_app\n",
     "prev_app = prev_app.drop(\"SK_ID_PREV\", axis=1)\n",
@@ -776,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -830,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -846,53 +891,29 @@
    "source": [
     "<a id=\"final_nan\"></a>\n",
     "\n",
-    "### [^](#toc) <u>Missing values</u>\n",
-    "\n",
-    "#### Categorical"
+    "### [^](#toc) <u>Missing values</u>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def fillna_cat(df):\n",
-    "    for col in [col for col in df if df[col].dtype==object]:\n",
-    "        df[col] = df[col].fillna(df[col].mode()[0])\n",
-    "    return df\n",
-    "\n",
-    "full     = fillna_cat(full)\n",
-    "bureau   = fillna_cat(bureau)\n",
-    "prev_app = fillna_cat(prev_app)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 41,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#### Numeric"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def fillna_num(df):\n",
-    "    missing_cols = [col for col in df.columns if any(df[col].isnull())]\n",
-    "    for col in missing_cols:\n",
-    "        df[col] = df[col].fillna(df[col].median())\n",
-    "    return df\n",
-    "\n",
-    "full     = fillna_num(full)\n",
-    "bureau   = fillna_num(bureau)\n",
-    "prev_app = fillna_num(prev_app)"
+    "full = fillna_cat(full)\n",
+    "full = fillna_num(full)\n",
+    "sum(full.isnull().sum())"
    ]
   },
   {
@@ -904,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -923,17 +944,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def factorize_df(df, cats):\n",
-    "    for col in cats:\n",
-    "        df[col], _ = pd.factorize(df[col])\n",
-    "    return df \n",
-    "\n",
     "# Get categorical features\n",
     "data_cats = [col for col in full.columns if full[col].dtype == 'object']\n",
     "\n",
@@ -950,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,19 +982,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fill NaN values"
+    "#### Fill NaN values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 222/222 [03:12<00:00,  1.15it/s]\n"
+      "100%|██████████| 222/222 [03:18<00:00,  1.12it/s]\n"
      ]
     }
    ],
@@ -988,7 +1004,9 @@
     "for col in tqdm(merged_cols):\n",
     "    not_null  = full[col].notnull()\n",
     "    median    = full[not_null][col].median()\n",
-    "    full[col] = full[col].fillna(median)    "
+    "    full[col] = full[col].fillna(median)    \n",
+    "    \n",
+    "sum(full.isnull().sum())"
    ]
   },
   {
@@ -1000,36 +1018,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Average Values for all bureau features \n",
     "merge_df         = bureau.groupby('SK_ID_CURR').mean()\n",
     "merge_df['N']    = bureau.groupby('SK_ID_CURR').count().iloc[:,0]\n",
-    "merge_df.columns = ['b_' + f_ for f_ in bureau_avg.columns]\n",
+    "merged_cols = ['b_' + f_ for f_ in merge_df.columns]\n",
+    "merge_df.columns = merged_cols\n",
     "\n",
-    "full = full.merge(right=bureau_avg.reset_index(), how='left', on='SK_ID_CURR')"
+    "full = full.merge(right=merge_df.reset_index(), how='left', on='SK_ID_CURR')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### I notice NaN values sneak into full after merging"
+    "#### Fill NaN values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 47/47 [00:41<00:00,  1.12it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full[\"no_bureau\"] = full[merged_cols[0]].map(lambda x: 1 if np.isnan(x) else 0)\n",
+    "\n",
+    "for col in tqdm(merged_cols):\n",
+    "    not_null  = full[col].notnull()\n",
+    "    median    = full[not_null][col].median()\n",
+    "    full[col] = full[col].fillna(median)    \n",
+    "\n",
+    "sum(full.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save processed data to CSV\n",
+    "\n",
+    "It's taken awhile to get here.  This should save some time later on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "full = fillna_num(full)"
+    "full.to_csv(\"../../data/home_default/20180526_full.csv\")"
    ]
   },
   {
@@ -1041,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -1064,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -1110,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1138,18 +1198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.26362374  0.26144034]\n",
+      "[ 0.26362326  0.26144034]\n",
       "\n",
-      "0.262532039663\n",
+      "0.262531799628\n",
       "\n",
-      "Scoring took 16 seconds\n"
+      "Scoring took 14 seconds\n"
      ]
     }
    ],
@@ -1194,14 +1254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took 101 seconds\n"
+      "Training took 130 seconds\n"
      ]
     }
    ],
@@ -1222,18 +1282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.27056261  0.2680451 ]\n",
+      "[ 0.27041623  0.26789412]\n",
       "\n",
-      "0.269303853521\n",
+      "0.269155176365\n",
       "\n",
-      "Scoring took 80 seconds\n"
+      "Scoring took 104 seconds\n"
      ]
     }
    ],
@@ -1276,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1304,18 +1364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.26377076  0.26150001]\n",
+      "[ 0.26357769  0.26136861]\n",
       "\n",
-      "0.262635385996\n",
+      "0.262473149213\n",
       "\n",
-      "Scoring took 6 seconds\n"
+      "Scoring took 7 seconds\n"
      ]
     }
    ],
@@ -1334,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -1354,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -1372,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1441,7 @@
        "False"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -1413,7 +1473,7 @@
     "pd.DataFrame({\n",
     "    \"SK_ID_CURR\": test_id,\n",
     "    \"TARGET\": final_pred\n",
-    "}).to_csv(\"../../submissions/full_db_add_N.csv\", index=False)"
+    "}).to_csv(\"../../submissions/full_db_all_med_.csv\", index=False)"
    ]
   },
   {
