done for tonight

--- a/in_progress/home_default/analysis.ipynb
+++ b/in_progress/home_default/analysis.ipynb
@@ -151,10 +151,11 @@
     "\n",
     "<div hidden>\n",
     "\n",
-    ",Row,Description,Special\n",
+    "Row,Description,Special\n",
     "\n",
     "1,SK_ID_CURR,ID of loan in our sample,\n",
     "2,TARGET,\"Target variable (1 - client with payment difficulties: he/she had late payment more than X days on at least one of the first Y installments of the loan in our sample, 0 - all other cases)\",\n",
+    "\n",
     "5,NAME_CONTRACT_TYPE,Identification if loan is cash or revolving,\n",
     "6,CODE_GENDER,Gender of the client,\n",
     "7,FLAG_OWN_CAR,Flag if the client owns a car,\n",
