--- a/archive/classifier_template.ipynb
+++ b/archive/classifier_template.ipynb
@@ -133,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "DATA_PATH = \"\"\n",
@@ -205,7 +207,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for col in train_x.columns:\n",
@@ -227,6 +231,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -246,6 +251,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -310,7 +316,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(figsize=(15, 15))\n",
@@ -332,7 +340,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(14, 6))\n",
@@ -362,7 +372,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cat_cols = [col for col in train_x.columns if train_x[col].dtype == object]\n",
@@ -384,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_x = pd.get_dummies(train_x)\n",
@@ -695,7 +709,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lgb_model = LGBMClassifier()\n",
@@ -723,7 +739,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lin_model = LinearDiscriminantAnalysis()\n",
@@ -971,13 +989,13 @@
     "x, y = (list(x) for x in zip(*sorted(zip(et_model.feature_importances_, train_x.columns), \n",
     "                                                            reverse = False)))\n",
     "\n",
-    "# Plot important features\n",
-    "sns.barplot(x[-25:], y[-25:])\n",
-    "\n",
     "### Styling\n",
     "sns.set(font_scale=2)\n",
     "plt.figure(figsize=(14, 12))\n",
-    "_ = plt.title(\"25 Most important features for model\")"
+    "plt.title(\"25 Most important features for model\")\n",
+    "\n",
+    "# Plot important features\n",
+    "_ = sns.barplot(x[-25:], y[-25:])"
    ]
   },
   {
